--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "phpunit/phpunit": "^9.1",
     "phpstan/phpstan": "^0.12.18",
     "mockery/mockery": "^1.3",
-    "squizlabs/php_codesniffer": "^3.5"
+    "squizlabs/php_codesniffer": "^3.5",
+    "vlucas/phpdotenv": "^4.1"
   }
 }
