--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,6 +14,11 @@
             <directory>tests</directory>
         </testsuite>
     </testsuites>
+    <groups>
+      <exclude>
+        <group>sandbox</group>
+      </exclude>
+    </groups>
     <filter>
         <whitelist>
             <directory suffix=".php">src/</directory>
