--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,17 @@
     "phpstan/phpstan": "^0.12.18",
     "mockery/mockery": "^1.3",
     "squizlabs/php_codesniffer": "^3.5",
-    "vlucas/phpdotenv": "^4.1"
+    "vlucas/phpdotenv": "^4.1",
+    "orchestra/testbench": "^5.2"
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "ClickDs\\WhiskApi\\ServiceProvider"
+      ],
+      "aliases": {
+        "WhiskApi": "ClickDs\\WhiskApi\\Facade"
+      }
+    }
   }
 }
