--- a/composer.json
+++ b/composer.json
@@ -26,14 +26,6 @@
     "phpstan/phpstan": "^0.12.18",
     "mockery/mockery": "^1.3",
     "squizlabs/php_codesniffer": "^3.5",
-    "vlucas/phpdotenv": "^5.0",
-    "orchestra/testbench": "^6.0"
-  },
-  "extra": {
-    "laravel": {
-      "aliases": {
-        "WhiskApi": "ClickDs\\WhiskApi\\Facade"
-      }
-    }
+    "vlucas/phpdotenv": "^5.0"
   }
 }
